tests/purs/passing/BlockString.purs
module Main where

import Prelude
import Effect.Console (log)

foo :: String
foo = """foo"""

main = log "Done"
